# personalized-learning-mvp

./: .env  .env.example  .gitignore  PROGRESS_LOG.md  README.md  docker-compose.yml  makefile
backend/: .env  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20250811_0001_baseline.py  20250811_0002_quiz_attempts_mastery.py  20250812_0001_baseline.py
backend/app/: main.py  wait_for_db.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  attempts.py  base.py  content.py  event.py  mastery.py  prereq.py  profile.py  quiz.py  skill.py  user.py
backend/app/routers/: __init__.py  attempts.py  auth.py  content.py  health.py  mastery.py  quizzes.py  skills.py  users.py
backend/app/schemas/: __init__.py  attempts.py  auth.py  content.py  mastery.py  quiz.py  skill.py  user.py
backend/app/seed/: loader.py  prereqs.json  quizzes.json  skills.json
backend/app/services/: __init__.py  bkt.py  grading.py
backend/tests/: test_auth.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/auth/: AuthContext.tsx  RequireAuth.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Signup.tsx
frontend/src/styles/: index.css
progress/: 2025-08-12.md  2025-08-13.md
scripts/: gen_weekly_summary.sh  new_progress_log.sh  new_progress_log.sh.save
