[project]
name = "plg-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.1",
  "alembic>=1.13.2",
  "pydantic>=2.7.4",
  "pydantic-settings>=2.3.4",
  "passlib[argon2]>=1.7.4",
  "pyjwt>=2.8.0",
  "python-multipart>=0.0.9",
]

[tool.uvicorn]
reload = true

[tool.pytest.ini_options]
pythonpath = "app"
